# schema-forge

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  clippy.toml  rustfmt.toml  schemaforge.toml.example
.agents/skills/: build-and-fix  clean-project  common-references  fix-issue  improve-claude-config  initialize-project  lint-and-fix  manage-adr  manage-changelog  parallel-executor  pr-workflow  problem-solving  python-upgrade  security-vulnerability-audit  setup-dev-env  test-and-fix
.claude/: README.md  settings.json  settings.local.json.example
.claude/agents/: code-reviewer.md  parallel-executor.md  parallel-tasks-planner.md  task-worker.md  verifier.md
.claude/hooks/: format-rust.sh
.claude/skills/build-and-fix/: SKILL.md
.claude/skills/clean-project/: SKILL.md
.claude/skills/common-references/: claude-code-guide.md  parallel-execution-patterns.md  python-commands.md  security-tools.md  troubleshooting.md  trunk-commands.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/improve-claude-config/: SKILL.md
.claude/skills/initialize-project/: SKILL.md
.claude/skills/lint-and-fix/: SKILL.md
.claude/skills/manage-changelog/references/: changie-cli-help.md
.claude/skills/parallel-executor/: SKILL.md
.claude/skills/pr-workflow/: SKILL.md
.claude/skills/problem-solving/: README.md
.claude/skills/python-upgrade/: SKILL.md
.claude/skills/security-vulnerability-audit/: SKILL.md
.claude/skills/setup-dev-env/: SKILL.md
.claude/skills/test-and-fix/: SKILL.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  schemaforge-release.yml  test.yml  tmp-autoformat.yml  tmp-clippy-fix.yml  trunk_check.yml  trunk_upgrade.yml
.todo_list/: schemaforge-hybrid-compiler.md
.trunk/: trunk.yaml
benchmarks/: README.md
conformance/json-schema-test-suite/: additionalProperties.json  allOf.json  anyOf.json  const.json  enum.json  items.json  oneOf.json  properties.json  required.json  type.json
conformance/parity/: README.md  fixtures.json
crates/schemaforge-analysis/: Cargo.toml
crates/schemaforge-analysis/src/: classify.rs  cost.rs  explain.rs  lib.rs
crates/schemaforge-bindings/: Cargo.toml
crates/schemaforge-bindings/src/: lib.rs
crates/schemaforge-cli/: Cargo.toml
crates/schemaforge-cli/src/: error.rs  main.rs
crates/schemaforge-codegen-rust/: Cargo.toml
crates/schemaforge-codegen-rust/src/: emit.rs  lib.rs  names.rs  tests.rs  types.rs
crates/schemaforge-compiler/: Cargo.toml
crates/schemaforge-compiler/src/: explain.rs  inspect.rs  lib.rs  lock.rs  tests.rs
crates/schemaforge-diagnostics/: Cargo.toml
crates/schemaforge-diagnostics/src/: lib.rs
crates/schemaforge-dialect/: Cargo.toml
crates/schemaforge-dialect/src/: lib.rs  schema_children.rs
crates/schemaforge-formats/: Cargo.toml
crates/schemaforge-formats/src/: lib.rs
crates/schemaforge-ir/: Cargo.toml
crates/schemaforge-ir/src/: lib.rs
crates/schemaforge-jsonschema/: Cargo.toml
crates/schemaforge-jsonschema/benches/: validation.rs
crates/schemaforge-jsonschema/src/: applicator.rs  core.rs  lib.rs  unevaluated.rs  validation.rs
crates/schemaforge-jsonschema/tests/: conformance.rs
crates/schemaforge-node/: Cargo.toml
crates/schemaforge-node/src/: lib.rs
crates/schemaforge-node/tests/: parity.rs
crates/schemaforge-openapi/: Cargo.toml
crates/schemaforge-openapi/src/: adapt.rs  lib.rs  parse.rs
crates/schemaforge-python/: Cargo.toml
crates/schemaforge-python/src/: lib.rs
crates/schemaforge-python/tests/: parity.rs
crates/schemaforge-resolver/: Cargo.toml
crates/schemaforge-resolver/src/: file.rs  fragment.rs  lib.rs  limit.rs  lock.rs  network.rs  offline.rs  uri.rs
crates/schemaforge-runtime/: Cargo.toml
crates/schemaforge-runtime/src/: lib.rs
crates/schemaforge-source/: Cargo.toml
crates/schemaforge-source/src/: lib.rs
crates/workspace-cli/: Cargo.toml
crates/workspace-cli/src/: main.rs
crates/workspace-core/: Cargo.toml
crates/workspace-core/src/: lib.rs
dev/: build.sh  clean.sh  codeql.sh  fmt.sh  lint.sh  setup.sh  test.sh
docs/: release-and-provenance.md  sbom.md  threat-model.md  wasm-feasibility.md
docs/adr/: 0001-record-architecture-decisions.md  0002-schemaforge-workspace-structure.md  0003-ffi-binding-unsafe-exception.md  0004-hybrid-ahead-of-time-compiler.md  0005-canonical-semantic-ir.md  0006-runtime-plan-format.md  0007-offline-resolver-default.md
docs/rfc/: 0001-schemaforge-hybrid-compiler.md
examples/: README.md  basic-object.json
fuzz/: README.md
