[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["yu-iskw"]
repository = "https://github.com/yu-iskw/rust-projet-template"
version = "0.1.0"
readme = "../../README.md"
keywords = ["json-schema", "compiler", "schemaforge"]
categories = ["development-tools", "parser-implementations"]

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.29"

# URI
fluent-uri = "0.4"

# Hashing / crypto
sha2 = "0.10"

# Regex
regex = "1"

# Collections
indexmap = { version = "2", features = ["serde"] }

# Error handling
thiserror = "2"

# Internal crates
schemaforge-source      = { path = "crates/schemaforge-source" }
schemaforge-diagnostics = { path = "crates/schemaforge-diagnostics" }
schemaforge-dialect     = { path = "crates/schemaforge-dialect" }
schemaforge-resolver    = { path = "crates/schemaforge-resolver" }
schemaforge-ir          = { path = "crates/schemaforge-ir" }
schemaforge-runtime     = { path = "crates/schemaforge-runtime" }
schemaforge-formats     = { path = "crates/schemaforge-formats" }
schemaforge-jsonschema  = { path = "crates/schemaforge-jsonschema" }
schemaforge-analysis    = { path = "crates/schemaforge-analysis" }
schemaforge-compiler    = { path = "crates/schemaforge-compiler" }
schemaforge-codegen-rust = { path = "crates/schemaforge-codegen-rust" }
schemaforge-openapi     = { path = "crates/schemaforge-openapi" }
schemaforge-python      = { path = "crates/schemaforge-python" }
schemaforge-node        = { path = "crates/schemaforge-node" }

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cognitive_complexity = "deny"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
use_self = "allow"
cast_possible_truncation = "allow"
struct_excessive_bools = "allow"
redundant_pub_crate = "allow"
doc_markdown = "allow"
