[package]
name = "schemaforge-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Type inference and constraint analysis over the Schemaforge IR."

[dependencies]
schemaforge-ir.workspace = true
schemaforge-jsonschema.workspace = true
serde_json.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[lints]
workspace = true
