[package]
name = "schemaforge-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared validation helpers for Schemaforge Python and Node.js bindings."

[dependencies]
schemaforge-jsonschema.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
