[package]
name = "schemaforge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for the Schemaforge hybrid schema compiler."

[[bin]]
name = "schemaforge"
path = "src/main.rs"

[dependencies]
schemaforge-compiler.workspace = true
schemaforge-jsonschema.workspace = true
schemaforge-ir.workspace = true
schemaforge-codegen-rust.workspace = true
schemaforge-openapi.workspace = true
clap.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
