[package]
name = "schemaforge-diagnostics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Diagnostic reporting (errors, warnings, hints) for Schemaforge."

[dependencies]
schemaforge-source.workspace = true
thiserror.workspace = true

[lints]
workspace = true
