[package]
name = "schemaforge-dialect"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "JSON Schema dialect detection and vocabulary management for Schemaforge."

[dependencies]
schemaforge-source.workspace = true
schemaforge-diagnostics.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
