[package]
name = "schemaforge-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Intermediate representation (IR) for compiled JSON Schemas."

[dependencies]
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true

[lints]
workspace = true
