[package]
name = "schemaforge-jsonschema"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "JSON Schema Draft 2020-12 validator for Schemaforge."

[dependencies]
schemaforge-formats.workspace = true
serde_json.workspace = true
regex.workspace = true
thiserror.workspace = true

[dev-dependencies]
schemaforge-runtime.workspace = true
serde.workspace = true
criterion.workspace = true

[[bench]]
name = "validation"
harness = false

[lints]
workspace = true
