[package]
name = "schemaforge-node"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Node.js bindings for Schemaforge (feature-gated FFI via napi-rs)."

[features]
napi = []

[dependencies]
schemaforge-bindings.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
