[package]
name = "schemaforge-openapi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "OpenAPI 3.x document parsing and JSON Schema extraction for Schemaforge."

[dependencies]
schemaforge-source.workspace = true
schemaforge-diagnostics.workspace = true
schemaforge-jsonschema.workspace = true
schemaforge-compiler.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[lints]
workspace = true
