[package]
name = "schemaforge-python"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Python bindings for Schemaforge (feature-gated FFI via PyO3)."

[dependencies]
schemaforge-compiler.workspace = true
schemaforge-jsonschema.workspace = true
schemaforge-ir.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
