[package]
name = "schemaforge-resolver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "URI resolution and $ref handling for Schemaforge (offline by default)."

[dependencies]
schemaforge-source.workspace = true
schemaforge-diagnostics.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
indexmap.workspace = true

[lints]
workspace = true
