[package]
name = "schemaforge-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Compile-time runtime plan constants for the Schemaforge compiler pipeline."

[dependencies]

[lints]
workspace = true
