[package]
name = "schemaforge-source"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Source file loading and span tracking for Schemaforge."

[dependencies]

[lints]
workspace = true
