[package]
name = "workspace-cli"
version = "0.1.0"
description = "Example CLI crate for the Rust workspace template."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords = ["template", "rust", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap.workspace = true
workspace-core = { path = "../workspace-core" }

[[bin]]
name = "workspace-cli"
path = "src/main.rs"

[lints]
workspace = true
